[gd_scene load_steps=6 format=3 uid="uid://ckgkwnxdcvtw7"]

[ext_resource type="Script" uid="uid://b3k3vtjk2yb61" path="res://scripts/TimerManager.gd" id="1_c6qpx"]

[sub_resource type="Gradient" id="Gradient_c6qpx"]
colors = PackedColorArray(0.4126076, 0.41549355, 0.42339376, 1, 0.4117647, 0.41568628, 0.42352942, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1kb7i"]
gradient = SubResource("Gradient_c6qpx")
fill_from = Vector2(0, 0.008547009)

[sub_resource type="Gradient" id="Gradient_1daji"]
offsets = PackedFloat32Array(0.007782101, 0.49805447, 1)
colors = PackedColorArray(1.732707e-06, 0.5914603, 0.699782, 1, 0, 0.84127736, 0.8838097, 1, 0.99999994, 0.20707268, 0.73355913, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1daji"]
gradient = SubResource("Gradient_1daji")
fill_to = Vector2(1, 0.047008548)

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c6qpx")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(900, 600)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "GOMODORO	"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerDisplay" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 98
text = "display time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
value = 100.0
nine_patch_stretch = true
stretch_margin_top = 40
texture_under = SubResource("GradientTexture2D_1kb7i")
texture_progress = SubResource("GradientTexture2D_1daji")
tint_progress = Color(0.36468717, 0.5530627, 0.7205617, 1)

[node name="CycleTracker" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/CycleTracker"]
layout_mode = 2

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/VBoxContainer/CycleTracker"]
layout_mode = 2

[node name="ColorRect3" type="ColorRect" parent="MarginContainer/VBoxContainer/CycleTracker"]
layout_mode = 2

[node name="ColorRect4" type="ColorRect" parent="MarginContainer/VBoxContainer/CycleTracker"]
layout_mode = 2

[node name="ControlButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StartPause" type="Button" parent="MarginContainer/VBoxContainer/ControlButtons"]
layout_mode = 2
text = "start/pause"

[node name="Reset" type="Button" parent="MarginContainer/VBoxContainer/ControlButtons"]
layout_mode = 2
text = "reset"

[node name="MiniGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Mini Game"

[node name="CountdownTimer" type="Timer" parent="."]

[connection signal="pressed" from="MarginContainer/VBoxContainer/ControlButtons/StartPause" to="." method="_on_start_pause_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ControlButtons/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MiniGameButton" to="." method="_on_mini_game_button_pressed"]
